I changed the default paragraph tag font size to try and make it more readable. I altered some of the style to fix stuff like the card appearing over the navbar.

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 nav {
 	width: 100%;
 	position: fixed !important;
+	z-index: 9999;
 }
 
 .dropdown-menu a:hover {
@@ -20,5 +21,5 @@ li a, a{
 }
 
 p {
-	font-size: 20px;
+	font-size: 18px;
 }
